fix: only show y scrollbar when needed in sidebar
By setting `scroll` rather than `auto` scrollbar is shown even when there is no overflow

--- a/src/assets/stylesheets/Sidebar.scss
+++ b/src/assets/stylesheets/Sidebar.scss
@@ -127,7 +127,7 @@
 .sidebar__panel-content {
   flex: 1;
   padding: $space-1 0;
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-width: thin;
 }
 
